--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "got": "^11.8.2",
     "path": "^0.12.7",
     "serve-favicon": "^2.5.0",
-    "socket.io": "^3.1.2"
+    "socket.io": "^3.1.2",
+    "tough-cookie": "^4.0.0"
   }
 }
